--- a/package.json
+++ b/package.json
@@ -3,12 +3,111 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint:fix": "prettier --write ./app && prettier --write ./pages",
+    "lint:setup": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
-    "next": "latest",
+    "@date-io/dayjs": "^2.17.0",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@monaco-editor/react": "^4.6.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.10.16",
+    "@mui/styled-engine-sc": "^5.10.16",
+    "@mui/x-date-pickers": "^6.18.0",
+    "@next/third-parties": "^14.2.4",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/page-navigation": "^3.12.0",
+    "@react-pdf-viewer/search": "^3.12.0",
+    "@react-pdf-viewer/thumbnail": "^3.12.0",
+    "@react-pdf-viewer/zoom": "^3.12.0",
+    "@sentry/react": "^7.74.1",
+    "@tabler/icons-react": "^3.1.0",
+    "@use-gesture/react": "^10.3.0",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/edge-config": "^0.4.1",
+    "aws-amplify": "^5.0.4",
+    "dayjs": "^1.11.6",
+    "dompurify": "^3.0.5",
+    "eslint": "8.27.0",
+    "eslint-config-next": "13.0.4",
+    "framer-motion": "^7.6.12",
+    "hls.js": "^1.3.2",
+    "hoist-non-react-statics": "^3.3.2",
+    "html2pdf.js": "^0.10.1",
+    "immutable": "^4.1.0",
+    "jspdf": "^2.5.1",
+    "monaco-editor": "^0.44.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "mousetrap": "^1.6.5",
+    "next": "^14.0.3",
+    "next-redux-wrapper": "^8.0.0",
+    "next-transpile-modules": "^10.0.0",
+    "password-validator": "^5.3.0",
+    "pdfjs-dist": "^2.16.105",
+    "qs": "^6.11.0",
+    "quill-image-uploader": "^1.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-portal": "^4.2.2",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.5",
+    "react-resize-detector": "^7.1.2",
+    "react-share": "^4.4.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.5.3",
+    "react-xarrows": "^2.0.2",
+    "recharts": "^2.7.2",
+    "redux": "^4.2.0",
+    "redux-immutable": "^4.0.0",
+    "redux-saga": "^1.2.1",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
+    "reselect": "^4.1.7",
+    "sanitize.css": "^13.0.0",
+    "showdown": "^2.1.0",
+    "sockette": "^2.0.6",
+    "styled-components": "^5.3.6",
+    "swr": "^2.2.4",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@storybook/addon-essentials": "^8.2.3",
+    "@storybook/addon-interactions": "^8.2.3",
+    "@storybook/addon-links": "^8.2.3",
+    "@storybook/addon-onboarding": "^8.2.3",
+    "@storybook/addon-themes": "^8.2.4",
+    "@storybook/blocks": "^8.2.3",
+    "@storybook/nextjs": "^8.2.3",
+    "@storybook/react": "^8.2.3",
+    "@storybook/test": "^8.2.3",
+    "@types/node": "18.11.10",
+    "@types/uuid": "^9.0.2",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint-plugin-storybook": "^0.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "2.8.8",
+    "prettier-plugin-curly": "^0.2.1",
+    "storybook": "^8.2.3",
+    "typescript": "5.0.4"
+  },
+  "resolutions": {
+    "micromatch": "^4.0.5"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "engines": {
     "node": ">=18"
